# switchboard

./: .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  README.md  TODO.md  TODOS.md  components.json  index.html  package-lock.json  package.json  skills-lock.json  tailwind.config.js  tsconfig.json  vite.config.ts
.agents/skills/release/: SKILL.md
.claude/skills/release/: SKILL.md
.codex/: hooks.json
.github/workflows/: deploy-landing.yml  release.yml
docs/: ARCHITECTURE.md  session-scoped-workspace-panel-plan.md  worktree-branch-session-plan.md
docs/plans/: dispatch-merge-queue.md  middle-pane-surface-tabs.md  pty-input-batching.md
landing/: next.config.ts  package-lock.json  package.json
landing/src/app/: globals.css  layout.tsx  page.tsx
landing/src/components/: cta.tsx  download-card.tsx  faq.tsx  features.tsx  footer.tsx  header.tsx  hero.tsx  how-it-works.tsx  product-showcase.tsx
scripts/: install.sh  package-dmg.sh  release.sh  sync-version.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: AppIcon.icns  icon.icns
src-tauri/src/: hook_server.rs  lib.rs
src-tauri/src/commands/: claude_data.rs  codex_data.rs  files.rs  git.rs  hooks.rs  mod.rs  pty.rs  session.rs  session_metadata.rs  worktree.rs
src/components/: theme-provider.tsx
src/components/agents/: AgentIcon.tsx
src/components/canvas/: CanvasView.css  CanvasView.tsx  canvas-state.ts  canvas-viewport.ts  tile-interactions.ts  (+1 more)
src/hooks/: useAppUpdater.ts  useClaudeHooks.ts  useGitState.ts  useKeyboardShortcuts.ts  useNotchNotifications.ts  usePty.ts  useSessionGitSummaries.ts  useSessions.ts  useTokenUsage.ts  useWindowFocus.ts
src/lib/: agents.ts  branches.ts  file-dnd.ts  pane-tree.ts  pricing.ts  session-attention.ts  session-transcript.ts  tauri-commands.ts  time.ts
src/state/: context.tsx  reducer.ts  types.ts
src/styles/: globals.css  terminal.css
(+47 files in other folders)
