[package]
name = "switchboard"
version = "0.1.0"
description = "Open-source multi-agent orchestrator for AI coding agents"
authors = ["nyangshawbin"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-log = "2"
portable-pty = "0.9"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
time = { version = "0.3", features = ["formatting"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-shell = "2.3.5"

[dev-dependencies]
tempfile = "3"
